--- a/covid-19-r/covid-19-gis.Rmd
+++ b/covid-19-r/covid-19-gis.Rmd
@@ -120,7 +120,7 @@ barplot_data <- plt_data %>%
 
 ### Plot the map
 
-```{r}
+```{r, fig.height=20}
 leaflet(plt_data) %>% addTiles() %>%
   addCircleMarkers(
     ~lon, ~lat,
